Fix cloudfront invalidation command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Cloudfront invalidation
         uses: ItsKarma/aws-cli@v1.70.0
         with:
-          args: aws cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID} --paths '/*'
+          args: cloudfront create-invalidation --distribution-id ${DISTRIBUTION_ID} --paths '/*'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
