Use github oidc for build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-
+      
+permissions:
+  id-token: write
 
 jobs:
   build:
@@ -28,9 +30,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION  }}
+          role-to-assume: arn:aws:iam::299695708834:role/DevelopersDeployRole
+          role-session-name: GHActionsOIDCRole-actions
+          aws-region: us-east-1
       - name: S3 sync
         run: |
           aws s3 sync --delete --acl public-read ./build s3://developers.inplayer.com/
